final/deployment/blue-green/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-green
  namespace: production
  labels:
    app: inference
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference
      color: green
  template:
    metadata:
      labels:
        app: inference
        color: green
    spec:
      serviceAccountName: inference
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: inference
          image: mlops-inference:final
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          ports:
            - name: http
              containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 2Gi

      volumes:
        - name: tmp
          emptyDir: {}
