final/deployment/blue-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-production
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: inference
    color: blue
  ports:
    - name: http
      port: 8000
      targetPort: 8000
